--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@
   }
 
   .duckCardGroup {
-    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); /* Adjust the number of columns and card width on smaller screens */
+    display: flex;
+    margin-top: 30px;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically if needed */
+    min-height: 100vh; /* Ensure it takes at least the full height of the viewport */
   }
 }
