--- a/src/Profile.css
+++ b/src/Profile.css
@@ -2,64 +2,24 @@
   padding: 2em; /* Adjust the padding as necessary */
 }
 
-/* Styles for the duck image */
-.duck-image {
+.duck-image,
+.duck-name-header {
   margin-bottom: 1em;
 }
 
-/* Styles for the duck name header */
 .duck-name-header {
-  margin-top: 1em;
   text-align: center; /* Center the duck's name */
 }
 
-/* Styles for bio and details segments */
 .duck-bio-segment,
-.details-segment {
+.details-segment,
+.details-list,
+.more-details-button {
   padding: 2em;
 }
 
-/* Horizontal scrolling for the map cards */
-.map-cards-group {
-  display: flex;
-  overflow-x: auto;
-  padding: 1em 0;
-  margin-top: 2em;
-}
-
-.map-cards-group .map-card {
-  flex: 0 0 auto; /* Prevent flex items from shrinking */
-  margin-right: 1em; /* Space between items */
-  width: 300px; /* Fixed width for each map card */
-}
-
-/* Fix for the last child in horizontal scroll */
-.map-cards-group .map-card:last-child {
-  margin-right: 0;
-}
-
-/* Styles for the image scroll container */
-.image-scroll-container {
-  display: flex;
-  overflow-x: auto;
-  padding: 1em 0;
-  margin-top: 2em;
-}
-
-.image-scroll-container > * {
-  flex: 0 0 auto; /* Prevent flex items from shrinking */
-  margin-right: 1em; /* Space between items */
-  max-width: 100%; /* Ensure items do not exceed container width */
-}
-
-.image-scroll-container > *:last-child {
-  margin-right: 0;
-}
-
-/* Styles for the list details */
 .details-list {
   list-style-type: none; /* Removes bullet points */
-  padding: 0;
 }
 
 .details-list-item {
@@ -70,96 +30,102 @@
   margin-right: 1em; /* Spacing between buttons */
 }
 
-/* Revisit gradient buttons */
 .orange-gray-gradient-button {
-  background: linear-gradient(to right, #f2711c, #808080); /* Gradient from orange to gray */
-  color: white; /* Set the text color to white for better visibility */
-  border: none; /* Optional: Removes the border */
+  background: linear-gradient(to right, #f2711c, #808080);
+  color: white;
+  border: none;
 }
 
 .orange-gray-gradient-button:hover {
-  background: linear-gradient(to right, #e6600d, #707070); /* Hover effect */
+  background: linear-gradient(to right, #e6600d, #707070);
 }
 
-.bottom-spaced-card {
-  margin-top: 20px; /* Space at the bottom of each card */
+.bottom-spaced-card,
+.main-duck-card {
+  margin-top: 20px;
 }
 
 .large-text {
-  font-size: 15px; /* Size of the large text */
+  font-size: 15px;
 }
 
-
-
+/* Styles for the scrollable map cards container */
 .map-cards-container {
   display: flex;
   overflow-x: auto;
-  gap: 1rem; /* Space between items */
-  padding: 1rem 0;
+  gap: .5rem;
+  padding: 1em 0;
 }
 
 .map-card {
-  flex: 0 0 auto; /* Don't grow, don't shrink, auto basis */
-  width: 300px; /* Adjust width as necessary */
+  flex: 0 0 auto;
+  width: 300px; /* Adjust as needed */
 }
 
-/* Additional style to ensure the map occupies the remaining space in the card */
 .map-card .leaflet-container {
-  width: 100%;
-  height: 250px; /* Adjust height as necessary */
+  height: 250px;
 }
 
-/* If you have specific styles for the Card component */
-.ui.card {
-  margin: 0!important; /* Remove any default margin */
-  width: 100%; /* Full width within its parent container */
+/* Styles for new ducks buttons */
+.new-duck-buttons {
+  position: relative;
+  margin: 1em;
 }
 
-
-
-
-
+.card-with-buttons {
+  overflow: hidden;
+}
 
 /* Media query for smaller screens */
 @media (max-width: 768px) {
   .duck-profile-container {
-    padding: 1em; /* Reduced padding for smaller screens */
+    padding: 1em;
   }
 
-  /* Full-width image on top */
+  .duck-image img,
+  .duck-bio-segment,
+  .map-cards-group,
+  .image-scroll-container,
+  .more-details-button,
+  .back-button {
+    width: 100%;
+  }
+
   .duck-image img {
-    width: 100%; /* Full width */
-    margin-bottom: 0.5em; /* Space after the image */
+    margin-bottom: 0.5em;
   }
 
-  /* Full-width bio under the name */
   .duck-bio-segment {
-    order: 3; /* Ensures bio comes after the name */
-    width: 100%; /* Full width */
-    padding: 1em; /* Adjusted padding for bio */
-    margin-bottom: 1em; /* Space after the bio */
+    order: 3;
+    padding: 1em;
+    margin-bottom: 1em;
   }
 
-  /* Adjustments for the map cards and image containers on smaller screens */
   .map-cards-group,
   .image-scroll-container {
-    order: 4; /* Ensures they come after bio */
-    width: 100%; /* Full width */
-    padding: 0; /* Remove padding */
-    margin-top: 1em; /* Space before the cards */
-    justify-content: center; /* Center the content */
+    order: 4;
+    padding: 0;
+    margin-top: 1em;
+    justify-content: center;
   }
 
   .map-cards-group .map-card,
   .image-scroll-container > * {
-    width: 100%; /* Each item takes the full width of its container */
-    margin-right: 0; /* No margin on the right */
+    margin-right: 0;
   }
 
-  /* Adjust the button styles for full width */
   .more-details-button,
   .back-button {
-    width: 100%; /* Full width buttons */
-    margin-bottom: 1em; /* Space after the buttons */
-  }
+  margin-bottom: 1em;
+}
+}
+
+/* Ensure buttons are contained within the card for new ducks */
+.new-duck-buttons {
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+button {
+margin-top: 0.5em;
+}
 }
