--- a/src/Profile.css
+++ b/src/Profile.css
@@ -1,5 +1,5 @@
 .duck-profile-container {
-  padding: 2em; /* Adjust the padding as necessary */
+  padding: 2em;
 }
 
 .duck-image,
@@ -8,7 +8,7 @@
 }
 
 .duck-name-header {
-  text-align: center; /* Center the duck's name */
+  text-align: center;
 }
 
 .duck-bio-segment,
@@ -19,15 +19,15 @@
 }
 
 .details-list {
-  list-style-type: none; /* Removes bullet points */
+  list-style-type: none;
 }
 
 .details-list-item {
-  margin-bottom: 0.5em; /* Spacing between items */
+  margin-bottom: 0.5em;
 }
 
 .more-details-button {
-  margin-right: 1em; /* Spacing between buttons */
+  margin-right: 1em;
 }
 
 .orange-gray-gradient-button {
@@ -63,25 +63,10 @@
 }
 
 .map-card .leaflet-container {
-  height: 250px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-
-
-/* Styles for the scrollable image cards container */
-.image-cards-container {
-  display: flex;
-  overflow-x: auto;
-  gap: .5rem;
-  padding: 1em 0;
-}
-
-.image-card {
-  flex: 0 0 auto;
-  width: 300px; /* Adjust as needed */
-}
-
-
-
 
 /* Styles for new ducks buttons */
 .new-duck-buttons {
@@ -102,7 +87,6 @@
   .duck-image img,
   .duck-bio-segment,
   .map-cards-group,
-  .image-scroll-container,
   .more-details-button,
   .back-button {
     width: 100%;
@@ -118,31 +102,29 @@
     margin-bottom: 1em;
   }
 
-  .map-cards-group,
-  .image-scroll-container {
+  .map-cards-group {
     order: 4;
     padding: 0;
     margin-top: 1em;
     justify-content: center;
   }
 
-  .map-cards-group .map-card,
-  .image-scroll-container > * {
+  .map-cards-group .map-card {
     margin-right: 0;
   }
 
   .more-details-button,
   .back-button {
-  margin-bottom: 1em;
-}
+    margin-bottom: 1em;
+  }
 }
 
 /* Ensure buttons are contained within the card for new ducks */
 .new-duck-buttons {
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
-button {
-margin-top: 0.5em;
-}
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  button {
+    margin-top: 0.5em;
+  }
 }
