--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,7 @@
   /* background: url('../src/assets/images/HeroImageSmall.jpg') no-repeat center center; */
   background-size: cover;
   background-attachment: fixed;
+  /* background-position: center 70px; */
 }
 
 .heroSection::after {
@@ -93,7 +94,8 @@
   width: 100%; /* Ensure the div takes full width */
   padding-top: 20px; /* Add some padding at the top to push it down slightly from the hero section */
   padding-bottom: 20px; /* Add some padding at the bottom for spacing before the next content section */
-  background: rgba(0, 0, 0, 0.5); /* Optional: Add a semi-transparent background to ensure text readability */
+  background: linear-gradient(to bottom, #A6051A, #000000); 
+  /*background: rgb(0, 0, 0.5); Optional: Add a semi-transparent background to ensure text readability */
   /* Remove negative margins, absolute positioning, and z-index */
 }
 
