--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5); /* Overlay effect */
+  /* background-color: rgba(0, 0, 0, 0.5); Overlay effect */
   z-index: 1;
 }
 
@@ -111,6 +111,13 @@
   top: 0;
   left: 0;
 }
+
+/* loaderContainer {
+  display: 'flex';
+  justify-content: 'center';
+  align-Items: 'center';
+  height: '100vh';
+} */
 
 
 @media (min-width: 769px) {
