--- a/src/App.css
+++ b/src/App.css
@@ -125,6 +125,14 @@
   left: 0;
 }
 
+.game-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Full viewport height */
+}
+
+
 /* loaderContainer {
   display: 'flex';
   justify-content: 'center';
