--- a/src/NotFoundPage.css
+++ b/src/NotFoundPage.css
@@ -29,6 +29,8 @@
     color: #ccc;
     margin-bottom: 2rem;
     max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media (max-width: 768px) {
